Fix scrollbars for the flashcards

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -520,7 +520,6 @@ FLASHCARDS
 
 .scrollable-text {
     max-height: 100%;
-    overflow: scroll;
 }
 
 .center-text {
